--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,12 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.12",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^3.2",
         "ramsey/uuid": "*",
+        "ramsey/uuid-doctrine": "^2.1",
         "symfony/clock": "7.1.*",
         "symfony/console": "7.1.*",
         "symfony/dotenv": "7.1.*",
@@ -67,6 +72,8 @@
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^8.2",
+        "dg/bypass-finals": "^1.8",
         "phpstan/phpstan": "*",
         "phpunit/phpunit": "^11.2",
         "symfony/browser-kit": "7.1.*",
