--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,7 @@
         <server name="SHELL_VERBOSITY" value="-1"/>
         <server name="SYMFONY_PHPUNIT_REMOVE" value=""/>
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.6"/>
+        <server name="KERNEL_CLASS" value="App\Kernel"/>
     </php>
 
     <testsuites>
@@ -26,4 +27,8 @@
             <directory>src</directory>
         </include>
     </source>
+    <extensions>
+        <bootstrap class="DG\BypassFinals\PHPUnitExtension"/>
+        <bootstrap class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension"/>
+    </extensions>
 </phpunit>
