--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3.7'
-
 services:
   app:
     image: php:8.2-fpm
@@ -13,10 +11,13 @@ services:
       - database
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD:-!ChangeMe!}@database:5432/${POSTGRES_DB:-app}?serverVersion=16&charset=utf8
-    command: php -S 0.0.0.0:8000 -t public
+    command: php -S 0.0.0.0:8888 -t public
+    extra_hosts:
+      - host.docker.internal:host-gateway
     ports:
-      - "8000:8000"
-      - "9003:9003"
+      - "8888:8888"
+    networks:
+      - local
   ###> doctrine/doctrine-bundle ###
   database:
     image: postgres:${POSTGRES_VERSION:-16}-alpine
@@ -36,6 +37,8 @@ services:
       - database_data:/var/lib/postgresql/data:rw
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
       # - ./docker/db/data:/var/lib/postgresql/data:rw
+    networks:
+      - local
   ###< doctrine/doctrine-bundle ###
   composer:
     image: composer:latest
@@ -46,7 +49,26 @@ services:
     depends_on:
       - app
 
+  buggregator:
+    container_name: ms-buggregator
+    image: ghcr.io/buggregator/server:latest
+    restart: on-failure
+    ports:
+      - "8000:8000"
+      - "9912:9912"
+      - "9913:9913"
+      - "1025:1025"
+    networks:
+      - local
+
 volumes:
   ###> doctrine/doctrine-bundle ###
   database_data:
 ###< doctrine/doctrine-bundle ###
+
+networks:
+  local:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.0.13.0/24
