--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -1,1 +1,7 @@
 error_reporting = E_ALL & ~E_DEPRECATED
+xdebug.idekey = "PHPSTORM"
+xdebug.client_host = host.docker.internal
+xdebug.mode = debug
+xdebug.client_port = 9003
+xdebug.discover_client_host = 0
+xdebug.start_with_request = default
