Change container user id

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     volumes:
       - .:/var/www/html
     working_dir: /var/www/html
+    user: "1000"
     depends_on:
       - database
     environment:
@@ -45,6 +46,7 @@ services:
     volumes:
       - .:/app
     working_dir: /app
+    user: "1000"
     command: composer install --ignore-platform-reqs
     depends_on:
       - app
