--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "allow-plugins": {
       "php-http/discovery": true,
       "symfony/flex": true,
-      "symfony/runtime": true
+      "symfony/runtime": true,
+      "phpstan/extension-installer": true
     },
     "sort-packages": true
   },
@@ -76,7 +77,11 @@
     "dama/doctrine-test-bundle": "^8.2",
     "dg/bypass-finals": "^1.8",
     "doctrine/doctrine-fixtures-bundle": "^3.6",
+    "phpstan/extension-installer": "^1.4",
     "phpstan/phpstan": "*",
+    "phpstan/phpstan-doctrine": "^1.5",
+    "phpstan/phpstan-phpunit": "^1.4",
+    "phpstan/phpstan-symfony": "^1.4",
     "phpunit/phpunit": "^11.2",
     "roave/security-advisories": "dev-latest",
     "symfony/browser-kit": "7.1.*",
