--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
-    "php": ">=8.2",
+    "php": ">=8.3",
     "ext-ctype": "*",
     "ext-iconv": "*",
-    "doctrine/dbal": "^3",
+    "doctrine/dbal": "^4",
     "doctrine/doctrine-bundle": "^2.12",
     "doctrine/doctrine-migrations-bundle": "^3.3",
     "doctrine/orm": "^3.2",
@@ -49,7 +49,8 @@
     "symfony/polyfill-php74": "*",
     "symfony/polyfill-php80": "*",
     "symfony/polyfill-php81": "*",
-    "symfony/polyfill-php82": "*"
+    "symfony/polyfill-php82": "*",
+    "symfony/polyfill-php83": "*"
   },
   "scripts": {
     "auto-scripts": {
@@ -78,10 +79,10 @@
     "dg/bypass-finals": "^1.8",
     "doctrine/doctrine-fixtures-bundle": "^3.6",
     "phpstan/extension-installer": "^1.4",
-    "phpstan/phpstan": "*",
-    "phpstan/phpstan-doctrine": "^1.5",
-    "phpstan/phpstan-phpunit": "^1.4",
-    "phpstan/phpstan-symfony": "^1.4",
+    "phpstan/phpstan": "2.0",
+    "phpstan/phpstan-doctrine": "^2.0",
+    "phpstan/phpstan-phpunit": "^2.0",
+    "phpstan/phpstan-symfony": "^2.0",
     "phpunit/phpunit": "^11.2",
     "roave/security-advisories": "dev-latest",
     "symfony/browser-kit": "7.1.*",
