Add PHP CS-Fixer, fix whole project

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,12 @@
 ###> phpstan/phpstan ###
 phpstan.neon
 ###< phpstan/phpstan ###
+
+###> bamarni/composer-bin-plugin ###
+/vendor-bin/
+###< bamarni/composer-bin-plugin ###
+
+###> friendsofphp/php-cs-fixer ###
+/.php-cs-fixer.php
+/.php-cs-fixer.cache
+###< friendsofphp/php-cs-fixer ###
