--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
       "php-http/discovery": true,
       "symfony/flex": true,
       "symfony/runtime": true,
-      "phpstan/extension-installer": true
+      "phpstan/extension-installer": true,
+      "bamarni/composer-bin-plugin": true
     },
     "sort-packages": true
   },
@@ -74,6 +75,7 @@
     }
   },
   "require-dev": {
+    "bamarni/composer-bin-plugin": "^1.8",
     "buggregator/trap": "^1.10",
     "dama/doctrine-test-bundle": "^8.2",
     "dg/bypass-finals": "^1.8",
