--- a/composer.json
+++ b/composer.json
@@ -89,6 +89,7 @@
     "roave/security-advisories": "dev-latest",
     "symfony/browser-kit": "7.1.*",
     "symfony/css-selector": "7.1.*",
+    "symfony/maker-bundle": "^1.61",
     "symfony/phpunit-bridge": "^7.1",
     "zenstruck/foundry": "^2.0",
     "zenstruck/messenger-test": "^1.9"
