Remove pdo and add pgsql local port

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -5,4 +5,4 @@ ADD php.ini $PHP_INI_DIR/conf.d/php-ini-overrides.ini
 
 #common soft
 COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/
-RUN install-php-extensions xdebug zip intl pdo_pgsql pdo bcmath
+RUN install-php-extensions xdebug zip intl pdo_pgsql bcmath
