--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ phpstan.neon
 /.php-cs-fixer.php
 /.php-cs-fixer.cache
 ###< friendsofphp/php-cs-fixer ###
+
+###> docker ###
+/docker-compose.override.yaml
+###< docker ###
