feat(User): Implement api endpoints

--- a/.env
+++ b/.env
@@ -38,3 +38,10 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&ch
 
 VAR_DUMPER_FORMAT=server
 VAR_DUMPER_SERVER=buggregator:9912
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=
+JWT_TOKEN_TTL=3600
+###< lexik/jwt-authentication-bundle ###
