--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ phpstan.neon
 ###> docker ###
 /docker-compose.override.yaml
 ###< docker ###
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
