--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - database
     environment:
       DATABASE_URL: postgresql://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD:-!ChangeMe!}@database:5432/${POSTGRES_DB:-app}?serverVersion=16&charset=utf8
-    command: php -S 0.0.0.0:8888 -t public
+    command: php -S 0.0.0.0:8888 -t public public/index.php
     extra_hosts:
       - host.docker.internal:host-gateway
     ports:
