--- a/composer.json
+++ b/composer.json
@@ -11,16 +11,30 @@
     "doctrine/doctrine-bundle": "^2.12",
     "doctrine/doctrine-migrations-bundle": "^3.3",
     "doctrine/orm": "^3.2",
+    "lexik/jwt-authentication-bundle": "^3.1",
+    "nelmio/api-doc-bundle": "*",
+    "phpdocumentor/reflection-docblock": "^5.6",
+    "phpstan/phpdoc-parser": "^2.3",
     "ramsey/uuid": "*",
     "ramsey/uuid-doctrine": "^2.1",
+    "symfony/asset": "7.1.*",
     "symfony/clock": "7.1.*",
     "symfony/console": "7.1.*",
     "symfony/dotenv": "7.1.*",
     "symfony/flex": "^2",
     "symfony/framework-bundle": "7.1.*",
     "symfony/messenger": "7.1.*",
+    "symfony/monolog-bundle": "*",
+    "symfony/property-access": "7.1.*",
+    "symfony/property-info": "7.1.*",
     "symfony/runtime": "7.1.*",
-    "symfony/yaml": "7.1.*"
+    "symfony/security-bundle": "7.1.*",
+    "symfony/serializer": "7.1.*",
+    "symfony/twig-bundle": "7.1.*",
+    "symfony/validator": "7.1.*",
+    "symfony/yaml": "7.1.*",
+    "twig/extra-bundle": "^2.12|^3.0",
+    "twig/twig": "^2.12|^3.0"
   },
   "config": {
     "allow-plugins": {
