--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,6 +15,7 @@ services:
     App\Common\Application\Command\CommandHandlerInterface:
       tags:
         - { name: messenger.message_handler, bus: command.bus }
+
     App\Common\Application\Query\QueryHandlerInterface:
       tags:
         - { name: messenger.message_handler, bus: query.bus }
@@ -22,6 +23,9 @@ services:
     App\Common\Application\EventHandlerInterface:
       tags:
         - { name: messenger.message_handler, bus: event.bus }
+
+    Symfony\Bundle\FrameworkBundle\Controller\AbstractController:
+      tags: [ 'controller.service_arguments' ]
 
 
   # makes classes in src/ available to be used as services
